# cluster-api-provider-outscale

./: .gitignore  .goreleaser.yaml  .tiltignore  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT  README.md  REUSE.toml  Tiltfile  apicovers.html  apicovers.txt  capm.yaml  check-gofmt  cluster-api-provider-outscale-manifest.yaml  cluster-temmplate.yaml  cluster-template.yaml  covers.html  covers.txt  eim-policy.example.json  github_actions  go.mod  go.sum  main.go  metadata.yaml  osc-secret.yaml  tilt.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  release.yaml  renovate.json5
cloud/: client.go  interfaces.go
controllers/: conditions_helpers.go  helpers_test.go  osccluster_bastion.go  osccluster_bastion_controller.go  osccluster_bastion_controller_unit_test.go  osccluster_controller.go  osccluster_controller_test.go  osccluster_helpers_test.go  osccluster_internetservice.go  osccluster_internetservice_controller.go  osccluster_internetservice_controller_unit_test.go  osccluster_loadbalancer.go  osccluster_loadbalancer_controller.go  osccluster_loadbalancer_controller_unit_test.go  osccluster_natservice.go  osccluster_natservice_controller.go  osccluster_natservice_controller_unit_test.go  osccluster_net.go  osccluster_net_controller.go  osccluster_net_controller_unit_test.go  osccluster_netaccesspoint.go  osccluster_publicip.go  (+42 more)
hack/json-format/: Cargo.toml  Makefile  run-integration-test.sh
hack/json-format/src/: core.rs  input.rs  lib.rs  main.rs
hack/json-format/tests/: integration_test.rs
(+451 files in other folders)
