[package]
name = "json_format_generator"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "json-format-generator generate json based on json, parameters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json_format"
path = "src/main.rs"

[lib]
name = "json_format"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde_json = { version = "1.0.89" }
clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.23"
config-file = "0.2.3"
serde_yaml = "0.9.14"
logs = "0.7.1"
log = "0.4.17"
lazy_static = "1.4.0"
regex = "1.7.0"
